# lilygo-wristband

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  esp_idf.patch  sdkconfig
components/display/: CMakeLists.txt  display.c  display.h
components/gui/: CMakeLists.txt  decode_image.c  widget.c  widget_button.c  widget_grid.c  widget_icon.c  widget_rect.c  widget_text.c  window.c
components/gui/include/: decode_image.h  gui_jpegs.h  widget.h  widget_button.h  widget_grid.h  widget_icon.h  widget_rect.h  widget_text.h  window.h
components/mpu9250/: CMakeLists.txt  mpu9250.c  mpu9250.h
components/pcf8563/: pcf8563.c  pcf8563.h
components/st7735/: st7735.c  st7735_defs.h
components/weather/: CMakeLists.txt  aqi.c  aqi.h  openweathermap.c  openweathermap.h  weather.c  weather.h
components/wifi_manager/: CMakeLists.txt  Kconfig.projbuild  soft_ap_prov.c  soft_ap_prov.h  soft_ap_prov_handlers.c  wifi.c  wifi.h  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  acc_filter.c  acc_filter.h  aqi.c  battery.c  battery.h  board.c  board.h  desktop.c  desktop.h  display.c  display.h  imu.c  imu.h  input.c  input.h  main.c  main_menu.c  main_menu.h  ota.c  ota.h  provisioning.h  pwr_mgmt.c  pwr_mgmt.h  state_ctrl.c  state_ctrl.h  time_sync.c  time_sync.h  touchpad.c  touchpad.h  wifi.c  wifi.h
main/screens/: desktop.c  desktop.h  menu.c  menu.h  ota_screen.c  ota_screen.h  prov_screen.c  prov_screen.h
main/screens/res/: d1_icon.c  d2_icon.c  d3_icon.c
ota/: example_test.py
